--- a/app/src/main/res/layout/fragment_person_details.xml
+++ b/app/src/main/res/layout/fragment_person_details.xml
@@ -19,18 +19,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="exitUntilCollapsed|scroll"
+            app:collapsedTitleGravity="start"
+            app:layout_scrollFlags="enterAlways|scroll"
             app:toolbarId="@+id/toolbar">
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/detail_toolbar"
                 android:layout_width="wrap_content"
-                android:layout_height="?attr/actionBarSize"
-                android:layout_gravity="center"
+                android:layout_height="?actionBarSize"
                 android:layout_marginStart="@dimen/margin20"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:popupTheme="@style/AppTheme.AppBarOverlay"
                 tools:title="@string/app_name" />
 
             <ImageView
@@ -195,13 +194,13 @@
         android:id="@+id/txt_error"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
         android:layout_marginTop="@dimen/margin100"
         android:gravity="top|center"
         android:text="@string/no_internet_connection"
         android:textColor="?colorAccent"
         android:textSize="@dimen/font30"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
